--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
             text-align: center;
         }
 
+        h3{
+          color:white;
+        }
         .mobile-frame {
             border: 2px solid #ccc;
             margin: 20px;
             padding: 10px;
             display: inline-block;
             text-align: center;
+            background-color: #3f3f3f;
         }
 
         .screen {
@@ -28,6 +32,7 @@
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
+            background-color: white;
         }
 
         /* Updated sizes */
